# -DE-pls

./: .gitignore  .main.py.swp  CODE_OF_CONDUCT.md  LICENSE  README.md  help_commands.py  main.py  main_obsolete.py  pyproject.toml  requirements.txt
Scripts/: activate  activate.bat  activate.fish  activate.nu
api_get/: .warframe_items.py.swp  comp_pol.py  leven_search.py  market.py  market_backup.py  progenitor_wf.py  timer.py  timer_backup.py  warframe.py  warframe_items.py
api_get/thumb/: comp_pol.py
extras/: timezone.py
query/: query_frames.py  query_incarnon.py
wiki/: frame_names.json  fsearch_item.json  item_name.json  progenitor.json  progenitor_all.json
